# absensi_py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  absensi.drawio  alembic.ini  cli.py  compose_w_pgsql.example  docker-compose.yaml.example  entrypoint.sh  fly.toml  main.py  pyproject.toml  settings.py  test_cli.py
.github/workflows/: docker-image.yml
common/: response_service_test.py  response_services.py  security.py  test_responses.py  test_security.py  utils.py
docker/postgres/: Dockerfile  install-hstore.sql
migrations/: env.py
migrations/factories/: RoleFactory.py  UserFactory.py
migrations/versions/: 116cfe4c5f71_create_shift_table.py  2000b59b2d9d_create_kehadiran_table.py  23fcf284d829_create_users_table.py  4bd142459e9f_create_role_table.py  aca187d4e25e_create_absensi_table.py  e2bbf1ec6cec_create_user_table.py
models/: Absensi.py  Kehadiran.py  Role.py  Shift.py  User.py  __init__.py
repository/: absensi.py  auth.py  jabatan.py  kehadiran.py  shift.py  user.py
routes/: __init__.py  absensi.py  auth.py  jabatan.py  kehadiran.py  shift.py  user.py
routes/no_prefix/: __init__.py  no_prefix.py
routes/test/: test_auth.py  test_jabatan.py  test_kehadiran.py  test_shift.py  test_user.py
schemas/: absensi.py  auth.py  common.py  guru.py  jabatan.py  karyawan.py  kehadiran.py  shift.py  user.py
seeders/: initial_seeders.py  roles.py  test_user_role_seeder.py  users.py
